test/expressions/bitshift/checks/bitshiftByNegativeParam.0.good
bitshiftByNegativeParam.chpl:8: error: Cannot bitshift 128 by -8 because -8 is less than 0
